# ximea-py

./: .gitignore  README.md  pyproject.toml
examples/: auto_exposure_wb.py  basic_capture.py  benchmark_fps.py  continuous_acquisition.py  device_discovery.py  error_handling.py  format_and_roi.py  hardware_trigger.py  temperature.py  triggered_capture.py
ximea/: __init__.py  xi_wintypes.py  xiapi.py  xidefs.py
