[project]
name = "ximea"
version = "4.33.14"
description = "Python wrapper for XIMEA camera xiApi"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ximea"]

[tool.hatch.build.targets.wheel.force-include]
"ximea/libs" = "ximea/libs"
